fix: remove gap between btns

--- a/src/app/questions/subpages/question-info/question-info.page.scss
+++ b/src/app/questions/subpages/question-info/question-info.page.scss
@@ -99,7 +99,6 @@ ion-button {
 .navigation-buttons {
   display: flex;
   justify-content: space-between;
-  gap: 1rem;
 
   & ion-button {
     flex: 1;
